--- a/gmail-crypt-master/src/mymail-crypt-options.html
+++ b/gmail-crypt-master/src/mymail-crypt-options.html
@@ -23,7 +23,7 @@
               <li><a href="#optionsSpan" class="linkLocal">options</a></li>
               <li><a href="#privateKeySpan" class="linkLocal">my keys</a></li>
               <li><a href="#publicKeySpan" class="linkLocal">friends' keys</a></li>
-              <li><a href="#helpSpan" class="linkLocal">help</a></li>
+              <!-- <li><a href="#helpSpan" class="linkLocal">help</a></li> -->
             </ul>
           </div>
         </div>
@@ -31,7 +31,7 @@
     </div>
     <header class="jumbotron subhead">
     <div class="container">
-      <h1>mymail-crypt for Gmail options</h1>
+      <h1>E-mail Encryption and Authentication</h1>
       <div class="subnav subnav-fixed">
       </div>
     </div>
@@ -42,8 +42,9 @@
         <span id="homeSpan">
           <h2>Home</h2>
           <p>
-          Welcome to mymail-crypt for Gmail!
-          <ul>
+          Welcome to e-mail encryption and authentication!
+          </p>
+          <!-- <ul>
             <li>Use the "my keys" section to <strong>generate</strong> a new OpenPGP key, <strong>import</strong> an existing key, or <strong>remove</strong> a key from the system. This manages private keys.</li>
             <li>Use the "friends' keys" section to <strong>import</strong> or <strong>remove</strong> keys from your friends. This manages public keys</li>
             <li>Use the "help" section for <strong>troubleshooting</strong>, and <strong>background information</strong>.</li>
@@ -54,14 +55,14 @@
           </p>
           <p>
           <strong>Before using this extension please read the "help" page and be aware of the security concerns. Also please be aware that the license of this software clearly states this comes WITHOUT ANY WARRANTY.</strong>
-          </p>
+          </p> -->
         </span>
         <span id="optionsSpan">
           <h2>options</h2>
-          <strong>Please make sure that you reload your gmail page to be sure these changes take effect.</strong>
+          <!-- <strong>Please make sure that you reload your gmail page to be sure these changes take effect.</strong> -->
           <form id="optionsForm" class="well">
             <label class="checkbox">
-              <input type="checkbox" id="stopAutomaticDrafts">stop automatic draft uploading. (EXPERIMENTAL -- Currently only works with "New Compose", does not support "popped out" compose mode)
+              <input type="checkbox" id="stopAutomaticDrafts">stop automatic draft uploading.
             </label>
             <label class="checkbox">
               <input type="checkbox" id="includeMyself">add myself as an encrypted recipient on all messages. Allows decrypting sent messages.
@@ -155,7 +156,7 @@
             </div>
           </form>
         </span>
-        <span id="helpSpan">
+        <!-- <span id="helpSpan">
           <h2>Help!</h2>
           <p>
           For the most up-to-date information, please check our <a href="https://github.com/seancolyer/gmail-crypt">project home page</a>.<br/>
@@ -207,15 +208,15 @@
             </li>
           </ul>
           </p>
-        </span>
+        </span> -->
       </div>
-      <footer class="footer">
+      <!-- <footer class="footer">
       <p>
       mymail-crypt for Gmail<br/>
       <a href="https://github.com/seancolyer/gmail-crypt" class="linkLocal">project page</a> |
       <a href="LICENSE">license</a>
       </p>
-      </footer>
+      </footer> -->
     </div>
   </body>
 
